--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
