--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "expo-web-browser": "~8.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
