--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.20.0",
+    "encoding-japanese": "^1.0.30",
     "expo": "~39.0.2",
     "expo-barcode-scanner": "~9.0.0",
     "expo-constants": "^9.2.0",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
+    "expo-web-browser": "~8.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
@@ -31,8 +33,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "expo-web-browser": "~8.5.0"
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
