--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-elements": "^2.3.2",
+    "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
