--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "apiKey": "dj00aiZpPXJ4NDlPWERIMnJXcSZzPWNvbnN1bWVyc2VjcmV0Jng9OGQ-"
+      "apiKey": ""
     },
     "description": ""
   }
